Backport to Java 8 and migration to Maven